# simple-uefi

./: CMakeLists.txt  README.md
simple_uefi/: CMakeLists.txt
simple_uefi/inc/: simple_uefi.h
simple_uefi/inc/efi/: efi.h  efiapi.h  eficonex.h  efidevp.h  efierr.h  efirtlib.h  efisetjmp.h  efistdarg.h  lib.h  libsmbios.h
simple_uefi/inc/efi/aarch64/: efibind.h  efisetjmp_arch.h
simple_uefi/inc/efi/arm/: efibind.h  efisetjmp_arch.h
simple_uefi/inc/efi/ia32/: efibind.h  efisetjmp_arch.h
simple_uefi/inc/efi/ia64/: efibind.h  efisetjmp_arch.h
simple_uefi/inc/efi/mips64el/: efibind.h  efisetjmp_arch.h
simple_uefi/inc/efi/x86_64/: efibind.h  efisetjmp_arch.h
simple_uefi/src/: simple_uefi.cpp
